# data_talks_club

./: .gitignore  README.md  pyproject.toml
2023/week_1/: 01_Intro_homework.ipynb
2023/week_2/: 02_experiment_tracking_hw.ipynb  wandb_homework.ipynb
2023/week_2/homework/: register_model.py
2023/week_2/homework-wandb/: regressor.pkl
2023/week_2/homework-wandb/wandb/: latest-run
2023/week_2/homework-wandb/wandb/run-20230602_102424-8coanbd2/: run-8coanbd2.wandb
2023/week_2/homework-wandb/wandb/run-20230602_102439-bvju6geh/: run-bvju6geh.wandb
2023/week_2/homework-wandb/wandb/run-20230602_102500-z8mr2bm4/: run-z8mr2bm4.wandb
2023/week_2/homework-wandb/wandb/run-20230602_102517-6chp4zcm/: run-6chp4zcm.wandb
2023/week_2/homework-wandb/wandb/sweep-wxhptnzz/: config-8coanbd2.yaml  config-bvju6geh.yaml  config-jxukviod.yaml  config-z8mr2bm4.yaml
2024/week_1/: 01_Intro_homework.ipynb
week_1/: 01_Intro_homework.ipynb
week_2/: 02_experiment_tracking_hw.ipynb  hpo.py  register_model.py  wandb_homework.ipynb
week_2/homework/: train.py
week_2/homework-wandb/: regressor.pkl  sweep.py  train.py
week_2/homework-wandb/wandb/: latest-run
week_2/homework-wandb/wandb/run-20230531_135215-w4buw1rd/: run-w4buw1rd.wandb
week_2/homework-wandb/wandb/run-20230602_061422-4stchkxp/: run-4stchkxp.wandb
week_2/homework-wandb/wandb/run-20230602_061953-bex6ewyq/: run-bex6ewyq.wandb
week_2/homework-wandb/wandb/run-20230602_102407-jxukviod/: run-jxukviod.wandb
week_2/homework-wandb/wandb/sweep-wxhptnzz/: config-6chp4zcm.yaml
(+23 files in other folders)
