[tool.poetry]
name = "data-talks-club"
version = "0.1.0"
description = "MLOps Zoomcamp - NYC Ride Duration Prediction"
authors = ["Bertan ULUSOY <bertan_ulusoy@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
fastparquet = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
